--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,13 @@
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
-    "noEmit": true
+    "noEmit": true,
+    // 解决vue组件内使用环境变量提示找不到对应文件的问题
+    "baseUrl": ".",
+    "paths": {
+          "@/*": [ "src/*" ],
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
 }
