--- a/package.json
+++ b/package.json
@@ -9,16 +9,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "@soybeanjs/vue-admin-tab": "^1.0.5",
+    "@types/mockjs": "^1.0.7",
+    "@types/nprogress": "^0.2.0",
     "axios": "^1.3.4",
+    "element-plus": "^2.3.0",
+    "mockjs": "^1.1.0",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.0.0-rc.10",
     "unocss": "^0.50.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.14.6",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue-macros/volar": "^0.9.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "eslint": "^8.35.0",
+    "eslint-plugin-vue": "^9.9.0",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
+    "unplugin-vue-define-options": "^1.2.4",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
   }
