--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@soybeanjs/vue-admin-tab": "^1.0.5",
     "@types/mockjs": "^1.0.7",
     "@types/nprogress": "^0.2.0",
+    "@vueuse/core": "^9.13.0",
     "axios": "^1.3.4",
     "element-plus": "^2.3.0",
     "mockjs": "^1.1.0",
