--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.3.4",
     "element-plus": "^2.3.0",
     "mockjs": "^1.1.0",
+    "naive-ui": "^2.34.4",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.0-rc.10",
     "unocss": "^0.50.4",
